# llm-reasoning-monitor

./: .gitignore  README.md  main.py  pyproject.toml
app/api/v1/: ws_monitor.py
app/core/: config.py
app/prompts/: monitor_prompts.yaml  target_prompts.yaml
app/schemas/: model_server_schema.py  monitor_schemas.py
app/services/: llm_client.py  model_server.py  step_parser.py
app/utils/: prompt_loader.py
app/utils/monitor_utils/: analyzer.py
