[project]
name = "tron-llm-reasoning-monitor"
version = "0.1.0"
description = "System to monitor LLM reasoning and classify vulnerabilities if any."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "llama-cpp-python[server]>=0.3.19",
    "orjson>=3.11.8",
    "uvicorn[standard]>=0.44.0",
    "websockets>=16.0",
]

[[tool.uv.index]]
url = "https://abetlen.github.io/llama-cpp-python/whl/cpu"
